[package]
name = "profile"
version = "0.1.0"
authors = ["Abdallah Ali <amaali1991@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
dioxus-sdk = { version = "0.7.0", features = ["time"] }
tokio = { version = "1.0", features = ["rt", "time"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
